--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -25,7 +25,7 @@ Hatcheries contribute to spawning abundances of many salmon populations and can 
 
 ### Accounting for genetic risks of hatchery production
 
-Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant hatchery enhancement in analyses of CU and SMU biological status consistent with the WSP. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values $<$ 0.5 indicating integrated-hatchery populations, where more than half of spawners are hatchery origin, values $\geqslant$ 0.5 and $<$ 0.72 indicating integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where more than half of spawners are considered 'wild' under the WSP [@withlerGeneticallyBasedTargets2018]. While these guidelines were proposed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018] <!--(Table \@ref(tab:PNIcategories)). -->
+Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant hatchery enhancement in analyses of CU and SMU biological status consistent with the WSP. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values $<$ 0.5 indicating integrated-hatchery populations, where more than half of spawners are hatchery origin, values $\geqslant$ 0.5 and $<$ 0.72 indicating integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where more than half of spawners are considered 'wild' under the WSP [@withlerGeneticallyBasedTargets2018]. While these guidelines were proposed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018]. <!--(Table \@ref(tab:PNIcategories)). -->
 
 <!--
 \renewcommand*{\arraystretch}{1.6}
@@ -52,7 +52,7 @@ Integrated-hatchery & $<$ 0.5 (No) \\
 
 \renewcommand*{\arraystretch}{1.6}
 \begin{longtable}[]{p{3.7cm} p{3cm} p{4.3cm}}
-\caption{Potential guidelines for the implementation of integrated hatchery popuations in WSP assessments based on their biological designation and Proportionate Natural Influence, PNI, taken from Withler et al. (2018).}\\
+\caption{Potential guidelines for the implementation of integrated hatchery populations in WSP assessments based on their biological designation and Proportionate Natural Influence, PNI, taken from Withler et al. (2018).}\\
 \hline
 Designation & PNI & Inclusion in WSP assessments \\ 
 \hline
@@ -85,7 +85,7 @@ In addition, @withlerGeneticallyBasedTargets2018 recommend that populations domi
 For some WSP assessments that include integrated-transition and integrated-wild populations, the demographic influence of hatchery production is removed from time-series of abundances when data on the proportion of hatchery- versus natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of spawner abundance. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that all natural spawners reproduce successfully in the wild and contribute to natural production. This way, the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the metric of spawner abundances, the contribution of hatchery-origin fish can be removed from spawner time series to reduce the influence of variability in annual hatchery production on status [@dfoWildSalmonPolicy2015]. Although removing hatchery-origin fish from analyses is inconsistent with the recommendation of @withlerGeneticallyBasedTargets2018 to include all spawners in biological assessments when natural spawning predominates (PNI $\geqslant$ 0.5), it is consistent with existing published WSP assessments on which our analyses relied and developing new time-series was beyond the scope of this study.
 
 
-In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5) [e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016], aligned with recommendations of @withlerGeneticallyBasedTargets2018. In these cases, there may a risk of current status being confounded by hatchery production which may mask changes in natural production production and obscure inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments. In general, we recommend flexibility in addressing hatchery-influenced populations in assessments as methods to process hatchery-origin fish and associated guidance evolve.
+In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5) [e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016], aligned with recommendations of @withlerGeneticallyBasedTargets2018. In these cases, there may a risk of current status being confounded by hatchery production which may mask changes in natural production  and obscure inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments. In general, we recommend flexibility in addressing hatchery-influenced populations in assessments as methods to process hatchery-origin fish and associated guidance evolve.
 
 
 
@@ -108,7 +108,7 @@ In most cases where hatchery-origin fish are not marked or sampled on the spawni
 <!--CH removed from bullet 4 on distribution: ", but have not yet been incorporated into the Salmon Scanner, in part due to a lack of rigorous benchmarks on these metrics"-->
 
 <!-- KH: I have expanded on the following paragraph as a revision from CSAS meeting-->
-To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009, we recommend that CU-level status consider multiple metrics, either integrated through formal status assessments [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016] or through other multidimensional approaches like the Pacific Salmon Status Scanner (Pestal et al. In prep.). In our case study applications (Holt et al., In prep), we demonstrate the application of the Pacific Salmon Status Scanner tool as a way to rapidly approximate more detailed WSP status assessments. The  Salmon Scanner (i) estimates statuses for individual WSP metrics and (ii) applies a decision tree algorithm to integrate multiple status estimates into a single status estimate (e.g., Red, Amber, Green) based on data type and availability. By using multiple metrics (Table \@ref(tab:SSmetrics)), the Salmon Scanner allows for the assessment of status across a wide range of data availabilities. When data for a single metric are not available, other metrics can be used to inform status. The decision tree algorithm was verified with data and local expertise (Pestal et al. in prep). An expert review of rapid status results for each CU is intended to be incorporated into the application of this tool (S. Grant, pers. comm.).  The Salmon Scanner can provide assessments under data limitations, and methods to account for resulting uncertainties from these data limitations are currently being integrated into the Scanner. 
+To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009, we recommend that CU-level status consider multiple metrics, either integrated through formal status assessments [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016] or through other multidimensional approaches like the Pacific Salmon Status Scanner (Pestal et al. In revision). In our case study applications @holtCaseStudyApplicationsInpress, we demonstrate the application of the Pacific Salmon Status Scanner tool as a way to rapidly approximate more detailed WSP status assessments. The  Salmon Scanner (i) estimates statuses for individual WSP metrics and (ii) applies a decision tree algorithm to integrate multiple status estimates into a single status estimate (e.g., Red, Amber, Green) based on data type and availability. By using multiple metrics (Table \@ref(tab:SSmetrics)), the Salmon Scanner allows for the assessment of status across a wide range of data availabilities. When data for a single metric are not available, other metrics can be used to inform status. The decision tree algorithm was verified with data and local expertise (Pestal et al. In revision). An expert review of rapid status results for each CU is intended to be incorporated into the application of this tool (S. Grant, pers. comm.).  The Salmon Scanner can provide assessments under data limitations, and methods to account for resulting uncertainties from these data limitations are currently being integrated into the Scanner. 
 
 <!--KH: if these methods to account for uncertainties haven't been developed yet (i.e., aren't yet written up in a draft paper), I'm not sure we should mention them.   
 CH: the challenge is I had original text saying the Salmon Scanner did not incorporate uncertainties in underlying metrics, but Sue mentioned that its being developed and so it's not really a disadvantage-->
@@ -121,7 +121,7 @@ CH: the challenge is I had original text saying the Salmon Scanner did not incor
 \begin{tabular}{p{4.2cm} p{4.2cm} p{4.2cm} p{4.2cm} p{4.2cm} p{3.2cm} }
 \multicolumn{3}{l}{}\\
 \toprule
-\multicolumn{3}{l}{Category} & Metrics & Example benchmarks (citations demsonstrating levels above serious harm)\\
+\multicolumn{3}{l}{Category} & Metrics & Example benchmarks (citations demonstrating levels above serious harm)\\
 \midrule
 \multicolumn{3}{l}{Metrics on abundances} & Absolute spawner abundances relative to absolute abundance benchmark & 1000 spawners (1,2) \\
 
@@ -146,7 +146,7 @@ Similarly, metrics and benchmarks on long-term and short-term trends in spawner 
 
 In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010; @peacockMetricsSamplingDesigns2012; @dfoIntegratedBiologicalStatus2016], but may not be required for all salmon species and to-date have not been included in the Salmon Scanner. In one example, the distribution of spawners across spawning sites and contractions in that distribution over time were considered in a WSP assessment for southern BC Chinook [@dfoIntegratedBiologicalStatus2016]. In addition, recovery targets for Interior Fraser Coho account for the distribution of spawners among sub-populations  [@interiorfrasercohorecoveryteamConservationStrategyCoho2006]. One challenge to applying metrics on distribution is identifying benchmarks that distinguish populations with increased risk of extinction.
 
-For the purposes of LRP development, CU statuses for case study applications were derived in two ways, using the multiple metrics applied within the Salmon Scanner and a single metric on spawner abundances. We applied both to demonstrate the consistency in these approaches and highlight any differences. When only a single metric is applied to derive status, there is a risk of providing a misleading assessment if other metrics that would have been used in a multidimensional approach provide contrary information, but are not included. A full review of the Salmon Scanner will be provided in Pestal et al. (In prep.).
+For the purposes of LRP development, CU statuses for case study applications were derived in two ways, using the multiple metrics applied within the Salmon Scanner and a single metric on spawner abundances. We applied both to demonstrate the consistency in these approaches and highlight any differences. When only a single metric is applied to derive status, there is a risk of providing a misleading assessment if other metrics that would have been used in a multidimensional approach provide contrary information, but are not included. A full review of the Salmon Scanner will be provided in Pestal et al. (In revision).
 
 <!--CH omitting becuase it pertains only to sensitivity analysis on proportinal LRPs, not aggregate abundance LRPs, which is confusing!  I've revised this text to refer to generational mean of SMU abundances relative to LRP, and moved to Step 9 of the Guidelines.
 
@@ -181,7 +181,7 @@ Additional points to add for the SAR:
 
 
 -->
-In this section, LRPs that integrate statuses of component CUs are proposed. These LRPs fall into two categories: those based on the proportion of component CUs above the Red zone, called CU status-based LRPs, and those based on aggregate abundances, called aggregate abundance LRPs.  Aggregate abundance LRPs are further subdivided into logistic regression LRPs and projection LRPs (Fig. \@ref(fig:LRP-types)). A more detailed description of LRPs is included in Holt et al. (In review). 
+In this section, LRPs that integrate statuses of component CUs are proposed. These LRPs fall into two categories: those based on the proportion of component CUs above the Red zone, called CU status-based LRPs, and those based on aggregate abundances, called aggregate abundance LRPs.  Aggregate abundance LRPs are further subdivided into logistic regression LRPs and projection LRPs (Fig. \@ref(fig:LRP-types)). A more detailed description of LRPs is included in @holtCaseStudyApplicationsInpress. 
 
 
 \begin{figure}[ht]
@@ -214,7 +214,7 @@ CU status-based LRPs are calculated from the proportion of CUs within an SMU tha
 
 CU status-based LRPs can be based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer-reviewed WSP status assessments or the use of the Salmon Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. CU status-based LRPs represent serious harm (Principle 2) as indicated by the status of any one component CU within the SMU being in the Red zone under the WSP, given that the deterioration of stock structure (i.e., loss of diversity) can itself be a form of serious harm. CU status-based LRPs are operational (Principle 3) because they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, CU status-based LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU-level benchmarks and statuses from the Salmon Scanner, to LRPs and SMU statuses (Principle 5).  CU status-based LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
 
-A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide reported in 2019.  
+A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g., for the management of numerous salmon species and CUs impacted by the Big Bar landslide reported in 2019.  
 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
@@ -350,7 +350,7 @@ Also, based on the IUCN probability categories in case studies paper section 2.3
 CH: good points Luke. Also, rebuilding guidance (DFO 2021) suggests precaution should be built into the management system and not the trigger for rebuilding.  i.e., 10% probability of breaching the LRP is not a breach. They suggest 50% probability is appropriate, which makes me wary about choosing a higher %. However, as you suggested, I have revised the text to say we recommend at least a 50% probability. 
 Another challenge when applying these choices to logistic regression-based LRPs is that high probabilities, the curve is quite flat, so the difference between an LRP at p=0.9 and 0.95 can be double or more in value for LRP-- so really hard to justify one value over the other. However at p=0.5, the curve is steep, so changing from p=0.4-0.6 doesn't really matter for the LRP.
 -->
-Uncertainty in logistic regression LRP estimates can be quantified based on confidence or credible intervals on the LRP estimate. See our application to Interior Fraser Coho Salmon for an example (Holt et al. In review).
+Uncertainty in logistic regression LRP estimates can be quantified based on confidence or credible intervals on the LRP estimate. See our application to Interior Fraser Coho Salmon for an example @holtCaseStudyApplicationsInpress.
 
 
 ```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all component CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represents a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their lower benchmark, LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line is the maximum likelihood model fit, and the grey shaded region shows the 95\\% confidence interval around the fit model. Coloured lines illustrate aggregate abundance LRPs for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all component CUs are greater than their respective LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
@@ -358,7 +358,7 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 ```
 
 
-We recommend evaluating the fit of the logistic regression prior to the development of LRPs to identify its reliability in determining serious harm to component CUs. Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in Holt et al. (In review). For example, diagnostics can evaluate the assumptions that, (a) aggregate abundances are linearly related to log-odds of all CUs being above their lower benchmarks, (b) observations are independent, and (c) there are no influential outliers. In addition, the statistical significance of the predictor variable (aggregate abundance) and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using a performance metric called the hit ratio. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can also be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric.
+We recommend evaluating the fit of the logistic regression prior to the development of LRPs to identify its reliability in determining serious harm to component CUs. Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in @holtCaseStudyApplicationsInpress. For example, diagnostics can evaluate the assumptions that, (a) aggregate abundances are linearly related to log-odds of all CUs being above their lower benchmarks, (b) observations are independent, and (c) there are no influential outliers. In addition, the statistical significance of the predictor variable (aggregate abundance) and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using a performance metric called the hit ratio. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can also be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric.
 
 
 We used a single metric of annual spawner abundances to approximate CU status when using the logistic regression approach, though WSP assessments generally use multiple metrics including trends in abundances and apply generational smoothing. Incorporating metrics on trends and smoothing abundance time-series prior to determining CU status introduces autocorrelation in observed CU statuses, violating the assumption of independent observations in the logistic regression model. This creates a systematic difference in derivation of LRPs depending on how CU status is assessed. Future research could consider logistic regression models that include autocorrelated residuals to develop LRPs based on CU-statuses derived from multiple metrics (e.g., the Pacific Salmon Status Scanner).
@@ -390,7 +390,7 @@ Similar to logistic regression LRPs, projection LRPs rely on the underlying rela
 
 In this approach, the population dynamics of individual CUs are projected with natural variability in population processes (e.g., recruitment and ages-at-maturity) and with covariance among CUs. Projections are done using current exploitation rates characterized with annual implementation uncertainty. Other exploitation scenarios can also be considered. Projections are run over an initialization period to remove the impacts of starting conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). For the SMUs we considered for our case studies, we approximated the management approach with constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As was done for logistic regression LRPs, status was estimated from a single metric rather than from the multidimensional approach within the Salmon Scanner. <!--KH: I would take out the following part of this sentence.  Because we always had abundance-based benchmarks for our true populations (i.e., er knew Sgen), we wouldn't have applied trends even if we used the multidimensional approach. Plus, we could have chosen to apply the absolute thresholds of 1500 fish in projections, but we didn't --> <!--omitted text: because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner. -->
 
-One advantage of projection LRPs over logistic regression LRPs is that projections allow for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression LRPs, this method is not limited by historical data on CU status. To implement projection LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (In review) and provided online (see Appendix \@ref(app:links)).  
+One advantage of projection LRPs over logistic regression LRPs is that projections allow for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression LRPs, this method is not limited by historical data on CU status. To implement projection LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to @holtCaseStudyApplicationsInpress and provided online (see Appendix \@ref(app:links)).  
 
 After providing parameter distributions describing the CU-level population dynamics and exploitation to samSim, the projections included four main steps:
 
@@ -416,7 +416,7 @@ knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
 
 Similar to logistic regression LRPs, the uncertainty in CU benchmarks and status are explicitly accounted for in projection LRPs when deriving the probability of all CUs being above their lower benchmarks. However, unlike logistic regression LRPs, there is no estimation uncertainty in projection LRPs because statistical model estimation is not required. Probabilities are derived directly from projections and underlying uncertainties are integrated directly into the overall probability. Therefore, confidence intervals are not provided. 
 
-Also, similar to logistic regression based LRPs, structural uncertainty in underlying population dynamics can be considered through sensitivity analyses or model averaging by combining results from stochastic random trials across those structural assumptions. See our implementation for Interior Fraser Coho Salmon in Holt et al. (In review) for more details.
+Also, similar to logistic regression based LRPs, structural uncertainty in underlying population dynamics can be considered through sensitivity analyses or model averaging by combining results from stochastic random trials across those structural assumptions. See our implementation for Interior Fraser Coho Salmon in @holtCaseStudyApplicationsInpress for more details.
 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
