--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -147,7 +147,7 @@ We recommend CU status-based LRPs as the default approach for identifying LRPs f
 Using this approach, the status of individual CUs is assessed and the proportion of CUs with status above Red is then compared to the LRP identified from Step 4.  Where available, we recommend applying CU assessments from recent peer-reviewed WSP status assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [@holtIndicatorsStatusBenchmarks2009; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. As a general guideline,  we suggest that 'recent' should mean within the most recent generation, though major perturbations such as landslide events may make even recent assessments unrepresentative of current status. <!--CH remove: Over time-periods longer than a generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
 
 
-Because formal, peer-reviewed WSP status assessments are resources-intensive processes involving large groups of experts over multiple days [@grantIntegratedBiologicalStatus2013] and are not available for most CUs, we demonstrate the application of a tool to quickly determine status, the Pacific Salmon Status Scanner (Pestal et al. in prep). Within this multidimensional framework, CU status depends on a variety of population metrics, where the choice of metrics depends on data availability and may differ among CUs within an SMU. The Salmon Scanner integrates status on available metrics to derive an overall status that is comparable among CUs. 
+Because formal, peer-reviewed WSP status assessments are resources-intensive processes involving large groups of experts over multiple days [@grantIntegratedBiologicalStatus2013] and are not available for most CUs, we demonstrate the application of a tool to quickly determine status, the Pacific Salmon Status Scanner (Pestal et al. In revision). Within this multidimensional framework, CU status depends on a variety of population metrics, where the choice of metrics depends on data availability and may differ among CUs within an SMU. The Salmon Scanner integrates status on available metrics to derive an overall status that is comparable among CUs. 
 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
@@ -296,7 +296,7 @@ LRPs based on logistic regressions may be appropriate when the following assumpt
 CH: you're probably right, but I'm unsure how much a few is, and wonder if some (possibly rare) case having one year might work..?
 -   -->
 
-- There is a statistically significant positive relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark without influential outliers, as supported by model diagnostics described in Holt et al. (In review). This relationship tends to be significant and positive when pairwise correlations in spawner abundances among CUs are strong and positive. For example, for our case study on Interior Fraser Coho, goodness-of-fit diagnostics identified a significant relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmarks (p<0.01) and the average pairwise spawner correlations among CUs was relatively high, 0.56. In contrast, for our case study on Inside South Coast Chum, *Oncorhynchus keta*, the same goodness-of-fit diagnostic was not statistically significant (p=0.13) and average pairwise spawner correlations was relatively weak, 0.12. 
+- There is a statistically significant positive relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark without influential outliers, as supported by model diagnostics described in @holtCaseStudyApplicationsInpress. This relationship tends to be significant and positive when pairwise correlations in spawner abundances among CUs are strong and positive. For example, for our case study on Interior Fraser Coho, goodness-of-fit diagnostics identified a significant relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmarks (p<0.01) and the average pairwise spawner correlations among CUs was relatively high, 0.56. In contrast, for our case study on Inside South Coast Chum, *Oncorhynchus keta*, the same goodness-of-fit diagnostic was not statistically significant (p=0.13) and average pairwise spawner correlations was relatively weak, 0.12. 
 
 - Residuals for logistic regression model fit are independent (i.e., not temporally autocorrelated). <!--CH: "Or if autocorrelation is present in residuals, it is accounted for in the model with an AR(1) term."  Don't think we need it though  KH: agree - not needed.-->
 
@@ -316,7 +316,7 @@ LRPs based on logistic regressions may not be appropriate when:
 
 - Data-deficient CUs do not meet criteria outlined in Step 3 such that their status cannot be represented by CUs with data.
 
-- Time-series of the proportion of CUs above their lower benchmarks lack contrast (i.e, are equal to 100% for all years, or less than 100% for all years).
+- Time-series of the proportion of CUs above their lower benchmarks lack contrast (i.e., are equal to 100% for all years, or less than 100% for all years).
 
 - The relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark is not statistically significant or contains influential outliers. In other words, model diagnostics do not support the use of logistic regression. 
 
@@ -370,7 +370,7 @@ Projection LRPs may be inappropriate when:
 
 - Current CU-level assessments are not available. Aggregate-abundance LRPs are intended to supplement CU status-based LRPs and not replace them. There may be risk of loss of CU-level biodiversity when relying on projection LRPs alone due to unforeseen processes (e.g., infrequent extreme events) not captured in the projection model that are reflected in current CU statuses. 
 -->
-Furthermore, projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high because there is a higher probability of any one CU having Red status. In these cases, CU status-based LRPs and harvest control rules that manage CUs independently may be more appropriate. <!--CH omit? : When used to inform operational control points, very high aggregate abundance LRPs may conflict with harvest or other socioeconomic objectives.--> Although higher LRPs under asychronous dynamics may initially be counter-intuitive due to the stability asynchrony provides to aggregate time-series [@schindlerPopulationDiversityPortfolio2010a], independent trajectories among components increases risks of individual component CUs dropping below lower benchmarks in mixed-CU fisheries necessitating higher LRPs. 
+Furthermore, projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high because there is a higher probability of any one CU having Red status. In these cases, CU status-based LRPs and harvest control rules that manage CUs independently may be more appropriate. <!--CH omit? : When used to inform operational control points, very high aggregate abundance LRPs may conflict with harvest or other socioeconomic objectives.--> Although higher LRPs under asynchronous dynamics may initially be counter-intuitive due to the stability asynchrony provides to aggregate time-series [@schindlerPopulationDiversityPortfolio2010a], independent trajectories among components increases risks of individual component CUs dropping below lower benchmarks in mixed-CU fisheries necessitating higher LRPs. 
 
 
 <!--KH: Next paragraph added as a revision after CSAS meeting -->
@@ -378,7 +378,7 @@ Model evaluation for projection LRPs is more subjective than for logistic regres
 
 ### Step 9: Apply aggregate abundance LRPs to derive SMU-level status and compare to status against CU status-based LRPs
         
-Aggregate abundance methods are then applied to derive LRPs based on the guidance above. See Appendix \@ref(app:case-studies) and Holt et al. (In review) for example applications. When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'provisional' (i.e., with increased uncertainty) until the status of all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
+Aggregate abundance methods are then applied to derive LRPs based on the guidance above. See Appendix \@ref(app:case-studies) and @holtCaseStudyApplicationsInpress for example applications. When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'provisional' (i.e., with increased uncertainty) until the status of all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
 
 We use generational mean spawner abundances as a basis for determining whether the SMU is above or below its LRP. A generational mean integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks [@holtIndicatorsStatusBenchmarks2009; @porsztReliabilityIndicatorsDecline2012]. As a result, generational smoothing reduces noise in annual CU status determination arising from both interannual variability in CU abundances from different cohorts and annual observation error in estimated spawner abundances. It also makes our determination of LRP status consistent with the approach taken for abundance-based benchmarks in published WSP assessments [e.g., @grant2017FraserSockeye2020] and the Salmon Scanner at the CU level. Further, we recommend that SMU status be evaluated approximately every salmon generation to align with guidance for generational CU assessments under the WSP [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020].
 
