--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -66,7 +66,7 @@ Two of the three CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were ass
 
 Biological benchmarks have been estimated for WCVI indicator populations using an empirical relationship between watershed area and two stock-recruitment biological benchmarks, S~REP~ (spawner abundances at replacement) and S~MSY~, based on a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to WCVI Chinook inlets. 
 
-We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: CU status-based LRPs and projection LRPs. Based on CU-level assessments, there were no years in the historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection LRPs for illustrative purposes. Fisheries are managed based on a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection LRPs across two key uncertainties: variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of Holt et al. in (review).
+We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: CU status-based LRPs and projection LRPs. Based on CU-level assessments, there were no years in the historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection LRPs for illustrative purposes. Fisheries are managed based on a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection LRPs across two key uncertainties: variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of @holtCaseStudyApplicationsInpress.
 
 We found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection LRPs were highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, reductions (by 25%) or increases (by 50%) in productivities among inlets resulted in relatively large changes in LRPs estimates. 
 
